--- a/cryptolens/style.css
+++ b/cryptolens/style.css
@@ -498,3 +498,47 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+
+
+.sources {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 15px;
+}
+
+.sources a {
+    height: 30px;
+    display: flex;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.sources a:hover {
+    transform: translateY(-3px);
+}
+
+.sources img {
+    height: 100%;
+    width: auto;
+    max-width: 120px;
+    object-fit: contain;
+    filter: grayscale(30%);
+}
+
+.sources img:hover {
+    filter: none;
+}
+
+
+.sources img {
+    filter: brightness(0) invert(0.8);
+}
+.sources img:hover {
+    filter: none;
+}
+
+        
