--- a/portofolio2/styles.css
+++ b/portofolio2/styles.css
@@ -96,7 +96,7 @@ body {
 /* Improved spacing for Research Insights */
 #blog .card {
     margin-bottom: 1.5rem;
-    margin-top: 50px;
+    margin-top: 5rem;
 }
 
 #blog .grid {
